<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".TestLocationCheck">

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button android:id="@+id/provider_fine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/use_fine_provider"
            android:background="@drawable/button_inactive"
            android:minWidth="100sp"
            android:onClick="useFineProvider" />

        <Button android:id="@+id/provider_both"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/use_both_providers"
            android:background="@drawable/button_inactive"
            android:minWidth="100sp"
            android:onClick="useCoarseFineProviders" />
    </LinearLayout>

    <TextView android:id="@+id/label_latlng"         android:layout_width="match_parent"
        android:layout_height="wrap_content"        android:textSize="15sp"
        android:text="@string/latlng" />

    <TextView android:id="@+id/latlng"        android:layout_width="match_parent"
        android:layout_height="wrap_content"        android:textSize="18sp" />

    <TextView android:id="@+id/label_address"        android:layout_width="match_parent"
        android:layout_height="wrap_content"        android:textSize="15sp"
        android:text="@string/address" />

    <TextView android:id="@+id/address"        android:layout_width="match_parent"
        android:layout_height="wrap_content"        android:textSize="18sp" />

    <Button android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/ok"
        android:onClick="dismissDisplay"/>
</LinearLayout>

